--- a/style.css
+++ b/style.css
@@ -120,6 +120,31 @@ button:hover {
     justify-content: space-evenly;
 }
 
+.character {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-character {
+    width: 80%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.main-character img {
+    width: 200px;
+    height: 350px;
+}
+
+.main-character p {
+    font-size: 2.5rem;
+}
+
 .hide {
     display: none;
 }
